projektilele sisu lisamine

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                     <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikool 100</span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -316,7 +316,7 @@
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                     <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikool kalender 2022</span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -332,7 +332,7 @@
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                     <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Tervist edendav kool</span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -351,7 +351,7 @@
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                     <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Akanade kujundused</span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -369,7 +369,7 @@
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                     <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Toodefodo kindad</span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -380,13 +380,13 @@
                            <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
                             <a href="matkarada.html">
                                 <figure>
-                                    <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642701418/Koduleht/matkarata_xysubq.jpg" alt=""/></div>
+                                    <div class="portfolio-img"><video controls autoplay loop src="https://res.cloudinary.com/dxxjplpwo/video/upload/v1642885720/Koduleht/Screen_Recording_2022-01-22_at_7.57.04_PM_expyb8.mov" alt=""/></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
                                             <div class="portfolio-hover-box align-middle"> 
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Drang nach Osten</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                             </div>
                                         </div> 
                                     </figcaption>
@@ -404,7 +404,7 @@
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                     <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Deco cut instagram</span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -420,8 +420,8 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">tervise rada </span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Tervise rada </span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -430,15 +430,15 @@
                             </li>         
                              <!-- start  portfolio item -->
                              <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
-                                <a href="toodefoodod_kindad.html">
+                                <a href="noorsootoo_keskuse_logo.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642750707/Koduleht/noortekeskus_logo_900x900px_du3qbz.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Toodefodo kindad</span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Saaremaa Noorsootöö Keskus logo </span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -455,7 +455,7 @@
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                     <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikooli 100 tassi pakend</span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -464,15 +464,15 @@
                             </li>      
                              <!-- start  portfolio item -->
                              <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
-                                <a href="deco_cut.html">
+                                <a href="kak_j6ulukaart_2022.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642751767/Koduleht/j6ulukaart_jt5chb.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Deco cut instagram</span>
-                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Kuressaare Ametikooli Jõulukaart 2022</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
@@ -490,7 +490,7 @@
                                             <div class="portfolio-hover-box align-middle">
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Kutse Kuressaare Ametikooli 100 sünnipäevale</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                             </div>
                                         </div>
                                     </figcaption>
@@ -498,7 +498,7 @@
                             </a>
                                 <!-- start  portfolio item -->
                                 <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
-                                    <a href="komiks.html">
+                                    <a href="syte.html">
                                         <figure>
                                             <div class="portfolio-img"><img
                                                     src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642865075/Koduleht/syte_mockup_pbv5mx.jpg"
@@ -507,8 +507,8 @@
                                                 <div class="portfolio-hover-main">
                                                     <div class="portfolio-hover-box align-middle">
                                                         <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                        <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Koomiks</span>
-                                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                        <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Syte koduleht</span>
+                                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd 2021 / 2022</p>
                                                     </div>
                                                 </div>
                                             </figcaption>
