--- a/kak_j6ulukaart_2022.html
+++ b/kak_j6ulukaart_2022.html
@@ -62,20 +62,19 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp; 
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Kuressaare Ametikooli kalendripäis 2022</h1>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp;</span>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Kuressaare Ametikooli 2022 jõulukaart</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Juubeliaasta tähistamiseks tellis Kuressaare ametikool meie õpperühmalt kalendripäise kujunduse. Kalendripäises oli
-                        oluline tuua välja läbilõige kooli ajaloost. Minu kujundus on inspireeritud infograafikast ja annab edasi kooli
-                        erinevaid nimetusi mida kool on kandnud viimase saj aasta jooksul.</p>
+                        <p>Kujundada koostööpartneritele saatmiseks sobilik jõulukaart. Kuna kaardid trükitakse, siis oli kindlasti vajalik teha ka
+                        korrektsed trükifailid. Soovisin enda jõulukaardiga anda edasi mõnusat talvetunnet, rõõmu ja rahu.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressare Ametikool</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Erik Riige</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada kalendripäis</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 sügis</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressaare Ametikool</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Reet Salumaa</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>2022 jõulukaart</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 talv</li>
                             <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
                     </div>
@@ -88,13 +87,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641639527/Koduleht/900x445px-_koolitusmajakasLogo2_yeqpbk.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663811/Koduleht/kustikalender_juuli_al0zkl.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641662179/Koduleht/original-_koolitusmajakasLogo_on_Black_Paper_qllkfa.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663809/Koduleht/kustikalender_oktoober_cotwo1.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641731151/Koduleht/Koolitusmajaka_logod_xs8umi.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641733105/Koduleht/kalender_12_kuud_tsxjpz.jpg" class="w-100" alt=""/>
                     </div>
                    
                 </div>
@@ -238,9 +237,9 @@
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
-                            <a href="meny.html">
+                            <a href="koolitusmajakas.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Menu
+                                Koolitusmajakas
                             </a>
                         </div>
                     </div>
@@ -250,9 +249,9 @@
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
-                            <a href="kalender.html">
+                            <a href="piktogrammid.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Kustikalender
+                                Piktokrammid
                             </a>
                         </div>
                     </div>
