--- a/matkarada.html
+++ b/matkarada.html
@@ -62,19 +62,20 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Trükis &nbsp;&nbsp; • &nbsp;&nbsp; Disain</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Kunstikalender 2021</h1>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp;</span>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Drang nach Osten</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Koostasin läbi ajaloo parimatest enda lemmiktöödest kunstikalendri. Kujunduse valisin suhteliselt minimalistliku. Iga töö juurde lisasin väikeseks aksendiks teoselt võetud värviga raami. Numbrid ja tekstid lisasin samuti aksentvärviga, et rõhutada teosel olevat koloriiti.</p>
+                        <p>Ülesandeks oli kujundada Adobe InDesigne programmiga interaktiivne matkavoldik, et õppida paremini tundma programmi ja
+                        osata erinevaid interaktiivseid tööriistu kasutada</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label></li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Erik Riige, Reet Truväärt</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Luua kustikalender</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Jaanuar 2021</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Erik Riige</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada interaktiivne matkavoldik</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 sügis</li>
+                            <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
                     </div>
                 </div>
