--- a/akende_kujundused.html
+++ b/akende_kujundused.html
@@ -63,20 +63,20 @@
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp;</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Aknadekujundused</h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Akende kujundused</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Minu ülesanne oli kujundada erinevatele õppehoonete ustele tervitustekstid ja oluliste ruumide suunaviidad.
+                        <p>Minu ülesanne oli kujundada erinevatele õppehoonete akendele tervitustekstid ja oluliste ruumide suunaviidad.
                         Tervitusteksti “Tere tulemast meie kooli” kujundasin veidi kaardus, et anda edasi mängulisust ja avatud koolikeskkonda.
-                        Teised tekstid on ametlikud ja hästi loetavad. Roheline värv on õppehoone tunnusvärv ja selle lisasin joonenea tekstide
+                        Teised tekstid on ametlikud ja hästi loetavad. Roheline ja oranž värv on õppehoonete tunnusvärvid ja selle lisasin joonenea tekstide
                         alla.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressaare Ametikool</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Erik Riige</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Tervitustekstid kooli ustele</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 talv</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Tervitustekstid kooli akendele</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 jaanuar</li>
                             <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
                     </div>
@@ -89,15 +89,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663811/Koduleht/kustikalender_juuli_al0zkl.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642934660/Koduleht/uksesildid_k_maja_be7mvq.jpg"
+                            class="w-100" alt="" />
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641663809/Koduleht/kustikalender_oktoober_cotwo1.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642696661/Koduleht/O_maja_akanakujundus_mockup_eolr0s.jpg " class="w-100" alt=""/>
                     </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641733105/Koduleht/kalender_12_kuud_tsxjpz.jpg" class="w-100" alt=""/>
-                    </div>
-                   
                 </div>
             </div>
         </section>
@@ -241,7 +238,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
                             <a href="koolitusmajakas.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Koolitusmajakas
+                                *
                             </a>
                         </div>
                     </div>
@@ -253,7 +250,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
                             <a href="piktogrammid.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Piktokrammid
+                                *
                             </a>
                         </div>
                     </div>
