--- a/saareliind_joulukaart.html
+++ b/saareliind_joulukaart.html
@@ -63,20 +63,17 @@
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp;</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Kuressaare Ametikool 100 logo</h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Saarte Liinid jõulukaart 2021</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Juubeliaasta tähistamiseks tellis Kuressaare ametikool meie õpperühmalt Ametikool 100 logo kujundamise. Enda kujundusega
-                        soovin edasi anda kooli mitmekülgsust ning mängulist. Logo kavandamisel võtsin põhielemendid kasutuselolevast logost.
-                        Number ühe tekitasin olemasoleva logo mehikesega ja nullidest moodustasin ilutulesiku kuma, millega lisasin kujundusele
-                        pidulikkust</p>
+                        <p>Ülesanne oli kujundada koostööpartneritele saatmiseks sobilik jõulukaart. Kuna praamid sõidavad pidevalt edasi tagasi, siis soovisin seda sama tunnet edasi anda enda kaardil. Värvid valisin erksad ja pidulikud. Jõulumeeleolu loomiseks lisasin laeva vööri kingitused. Kuna kaardid trükitakse, siis oli kindlasti vajalik teha ka korrektsed trükifailid.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressaare Ametikool</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Erik Riige</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada kooli 100 sünnipäeva logo</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 sügis</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Saarte Liinid</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Reet Salumaa</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada jõulukaart</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 detsember</li>
                             <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
                     </div>
