--- a/kak_100_logo.html
+++ b/kak_100_logo.html
@@ -62,19 +62,21 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp; • &nbsp;&nbsp; Animatsioon</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Rotoskoop animatsioon</h1>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp;</span>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Kuressaare Ametikool 100 logo</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Ülesanne oli vabalt valitud video põhjal teha animatsiooni klipp. Videoks valisin kolm meest, kes tantsivad ja
-                        animeerisin nende erinevaid tantsukombinatsioone.</p>
+                        <p>Juubeliaasta tähistamiseks tellis Kuressaare ametikool meie õpperühmalt Ametikool 100 logo kujundamise. Enda kujundusega
+                        soovin edasi anda kooli mitmekülgsust ning mängulist. Logo kavandamisel võtsin põhielemendid kasutuselolevast logost.
+                        Number ühe tekitasin olemasoleva logo mehikesega ja nullidest moodustasin ilutulesiku kuma, millega lisasin kujundusele
+                        pidulikkust</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Tunnitöö</label></li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Kadi Grass</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Rotoskoop animatsioon</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 jaanuar</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressaare Ametikool</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Erik Riige</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada kooli 100 sünnipäeva logo</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2021 sügis</li>
                             <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
                     </div>
@@ -87,9 +89,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <video controls autoplay loop src="https://res.cloudinary.com/dxxjplpwo/video/upload/v1642861515/Koduleht/kustse_900x900px.jpg0290-0374_mokssi.mkv" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642930077/Koduleht/ametikooli_100_LOGO_lopplik_must_valge_emts3w.jpg" class="w-100" alt=""/>
                     </div>
-                   
+                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642920954/Koduleht/ametikooli_100_LOGO_lopplik_900_900px_cxh9vo.jpg" class="w-100" alt=""/>
+                    </div>
                 </div>
             </div>
         </section>
@@ -233,7 +237,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
                             <a href="koolitusmajakas.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                               *
+                                *
                             </a>
                         </div>
                     </div>
@@ -245,7 +249,7 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
                             <a href="piktogrammid.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                              *
+                                *
                             </a>
                         </div>
                     </div>
