--- a/syte.html
+++ b/syte.html
@@ -66,9 +66,9 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Syte koduleht</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Minu üheks ülesandeks on luua meie õpilasfirmale Syte , mille üks liige ma ka olen koduleht. Kodulehel peaksid olema
-                        kajastaud kõigi meie 6 liikme parimad kujundustööd. Veebilehe olen kirjutanud peamiselt HTML ja CSS programmeerimise
-                        keelt kasutades</p>
+                        <p>Minu üheks ülesandeks oli meie õpilasfirmas Syte, luua koduleht. Kodulehel on kuvatud meie kõigi 6 liikme parimad
+                        kujundustööd. Veebilehe olen kirjutanud peamiselt HTML ja CSS programmeerimise keelt kasutades. Koduleht on veel töös
+                        ja täineneb päev-päevalt.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
